# barthes

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/barthes/: config.h  exceptions.h
include/barthes/handlers/: file.h  input.h  screen.h  terminal.h
include/barthes/utils/: string.h
src/: CMakeLists.txt  config.cpp  exceptions.cpp  main.cpp
src/handlers/: file.cpp  file.h  input.cpp  screen.cpp  screen.h  terminal.cpp  terminal.h
src/utils/: string.cpp
test/: CMakeLists.txt  config.test.cpp
test/data/: example.txt  reallylong.txt
test/handlers/: file.test.cpp  input.test.cpp  screen.test.cpp
